--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -1,21 +1,34 @@
-.basic-layout{
+.home-grid{
     display: grid;
     grid-template: auto 1fr auto/ auto 1fr auto;
 }
-.head{
-    padding: 2rem;
+header{
     grid-column: 1/4;
-    color:blueviolet;
+    grid-row: 1/2;
+    width: auto;
+    background-color:blueviolet;
 }
-.nav{
-    grid-column: 2;
+nav{
+    grid-column: 1/4;
+    grid-row: 2/3;
+    width: auto;
+    background-color: olivedrab;
 }
 .main{
-    grid-column:2/3;
+    grid-column:1/3;
+    grid-row: 3/5;
+    width: 100%;
+    background-color: aqua;
 }
-.right{
-    grid-column: 3/4;
+.aside{
+    grid-column: 3/5;
+    grid-row: 3/5;
+    width:100%;
+    background-color: yellow;
 }
-.footer{
+footer{
     grid-column: 1/4;
+    grid-row:5/6 ;
+    width: 100%;
+    background-color: plum;
 }
