--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -9,9 +9,7 @@ header{
     background-color:blueviolet;
 }
 nav{
-    grid-column: 1/4;
-    grid-row: 2/3;
-    width: auto;
+    display:flex;
     background-color: olivedrab;
 }
 .main{
