--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Oswald:wght@200..700&display=swap');
+
+
+
 .home-grid{
     display: grid;
     grid-template: auto 1fr auto/ auto 1fr auto;
@@ -29,4 +35,7 @@ footer{
     grid-row:5/6 ;
     width: 100%;
     
+}
+h1,h2{
+    font: oswald,lato;
 }
