--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Oswald:wght@200..700&display=swap');
-
 
 .home-grid{
     display: grid;
@@ -15,6 +13,9 @@ header{
 nav{
     display:flex;
     
+}
+body{
+    font-family: "Cormorant Garamond", serif;
 }
 .aboutmecard{
     grid-column:1/3;
@@ -35,5 +36,5 @@ footer{
     
 }
 h1,h2{
-    font: oswald,lato;
+    font-family: "Oswald", sans-serif;
 }
