--- a/styles/base.css
+++ b/styles/base.css
@@ -14,6 +14,11 @@ nav{
     display:flex;
     
 }
+nav a{
+    display: flex;
+    
+    font-family: "Oswald", sans-serif;
+}
 body{
     font-family: "Cormorant Garamond", serif;
 }
@@ -37,7 +42,7 @@ footer{
     grid-column: 1/4;
     grid-row:5/6 ;
     width: 100%;
-    
+    font-family: "Oswald", sans-serif;
 }
 h1,h2{
     font-family: "Oswald", sans-serif;
